ADD #1002 v01 : REMEMBER_ME

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,10 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\ParticipantAuthenticator
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path: /ytreytreyS
             logout:
                 path: app_logout
                 # where to redirect after logout
