UPDATE home CSS

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,7 +27,7 @@ security:
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 604800 # 1 week in seconds
-                path: /ytreytreyS
+                path: /
             logout:
                 path: app_logout
                 # where to redirect after logout
