--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,4 +43,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: '^/login', roles: }
+        - { path: '^/register|/ville|/site', roles: ROLE_ADMIN}
         - { path: '^/*', roles: ROLE_USER }
