ADD #ModifClient : Home page + base

--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ APP_SECRET=86afad2e226baddcb175545085da2da1
 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://user:root@127.0.0.1:3306/db_test"
-# DATABASE_URL="mysql://Tanguy:Tanguy@127.0.0.1:3306/sortiedotcom"
- DATABASE_URL="mysql://maxes:NePasOublier@127.0.0.1:3306/sorties"
+ DATABASE_URL="mysql://Tanguy:Tanguy@127.0.0.1:3306/sortiedotcom"
+# DATABASE_URL="mysql://maxes:NePasOublier@127.0.0.1:3306/sorties"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
