--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,6 +42,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        #- { path: '^/login', roles: }
-        #- { path: '^/register|/ville|/site', roles: ROLE_ADMIN}
-        #- { path: '^/*', roles: ROLE_USER }
+        - { path: '^/login', roles: }
+        - { path: '^/register|/ville|/site', roles: ROLE_ADMIN}
+        - { path: '^/*', roles: ROLE_USER }
